--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
                 </video>
                 <div class="login-cart d-flex align-items-center">
+                    <!-- <button class="toggle-button">☰</button> -->
                     <div class="cart">
                         <i class="fa-solid fa-cart-plus"></i>
                     </div>
