--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="sidebar">
             <!-- <img src="images/logo.jpg" alt="logo"> -->
             <div class="d-flex justify-content-between align-items-center">
-                <h3 class="text-white mb-lg-4">LA Test</h3>
+                <h3 class="text-white mb-lg-4">LA Farina</h3>
                 <button class="toggle-button">☰</button>
             </div>
             <hr>
