--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                 <div class="login-cart d-flex align-items-center">
                     <!-- <button class="toggle-button">☰</button> -->
                     <div class="cart">
+                        ☰
+                    </div>
+                    <div class="cart">
                         <i class="fa-solid fa-cart-plus"></i>
                     </div>
                     <div class="login ms-3"><a href="#"> <i class="fa-regular fa-user me-2"></i> Login</a></div>
