--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="sidebar">
             <!-- <img src="images/logo.jpg" alt="logo"> -->
             <div class="d-flex justify-content-between align-items-center">
-                <h3 class="text-white mb-lg-4">LA Farina</h3>
+                <h3 class="text-white mb-lg-4">LA FARINA</h3>
                 <button class="toggle-button">☰</button>
             </div>
             <hr>
@@ -73,10 +73,6 @@
 
                 </video>
                 <div class="login-cart d-flex align-items-center">
-                    <!-- <button class="toggle-button">☰</button> -->
-                    <div class="cart">
-                        ☰
-                    </div>
                     <div class="cart">
                         <i class="fa-solid fa-cart-plus"></i>
                     </div>
