--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
     <link rel="stylesheet" href="scss/style.css">
 </head>
 
-<body>
+<body class="position-relative">
     <div class="overlay"></div>
+    <button class="toggle-button">☰</button>
     <div class="main">
         <div class="sidebar">
             <!-- <img src="images/logo.jpg" alt="logo"> -->
             <div class="d-flex justify-content-between align-items-center">
                 <h3 class="text-white mb-lg-4">LA FARINA</h3>
-                <button class="toggle-button">☰</button>
+           
             </div>
             <hr>
             <nav class="my-lg-5">
