--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body class="position-relative">
     <div class="overlay"></div>
-    <button class="toggle-button">☰</button>
+   
     <div class="main">
         <div class="sidebar">
             <!-- <img src="images/logo.jpg" alt="logo"> -->
@@ -74,6 +74,7 @@
 
                 </video>
                 <div class="login-cart d-flex align-items-center">
+                    <button class="toggle-button me-2">☰</button>
                     <div class="cart">
                         <i class="fa-solid fa-cart-plus"></i>
                     </div>
