--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                 </video>
                 <div class="login-cart d-flex align-items-center">
-                    <button class="toggle-button me-2">☰</button>
+                    <button class="toggle-button d-flex align-items-center justify-content-center me-2">☰</button>
                     <div class="cart">
                         <i class="fa-solid fa-cart-plus"></i>
                     </div>
