--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    
     <div class="main">
         <div class="sidebar">
-            <!-- <img src="images/logo.jpg" alt="logo"> -->
+            <button class="toggle-button d-flex align-items-center justify-content-center me-2">☰</button>
             <div class="d-flex justify-content-between align-items-center">
              
                 <h3 class="text-white mb-lg-4">LA FARINA</h3>
@@ -75,7 +75,7 @@
 
                 </video>
                 <div class="login-cart d-flex align-items-center">
-                    <button class="toggle-button d-flex align-items-center justify-content-center me-2">☰</button>
+                    <!-- <button class="toggle-button d-flex align-items-center justify-content-center me-2">☰</button> -->
                     <div class="cart">
                         <i class="fa-solid fa-cart-plus"></i>
                     </div>
