--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="overlay"></div>
    
     <div class="main">
-        <button class="toggle-button d-flex align-items-center justify-content-center me-2">☰</button>
+        <button class="toggle-button d-flex align-items-center justify-content-center">  ☰</button>
         <div class="sidebar">
             
             <div class="d-flex justify-content-between align-items-center">
